<resources>
    <string name="app_name">MotoLogr NZ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">KT2K Studios</string>
    <string name="nav_header_subtitle">ktstudios2000@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="action_addons">Addons</string>

    <string name="nav_compliance_fragment">Compliance</string>
    <string name="nav_rucs_fragment">Update RUCs</string>

    <string name="menu_car">Mazda 323</string>
    <string name="menu_motorcycle">KTM Duke 200</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="menu_plus">Add New Vehicle</string>

    <!-- Navigation Labels -->
    <string name="nav_historical_rucs_fragment">Record RUCs</string>
    <string name="nav_historical_reg_fragment">Record Registration</string>
    <string name="nav_historical_wof_fragment">Record WOF</string>
    <string name="nav_vehicle_settings_fragment">Vehicle Settings</string>

    <!-- Preference Titles -->
    <string name="maintenance_header">Maintenance</string>
    <string name="logging_header">Logging</string>

    <!-- Maintenance Preferences -->
    <string name="default_mechanic_title">Default Mechanic</string>
    <string name="default_mechanic_key">default_mechanic</string>

    <!-- Logging Preferences -->
    <string name="fuel_consumption_title">Track fuel consumption</string>
    <string name="fuel_consumption_key">track_fuel_consumption</string>
    <string name="fuel_consumption_summary_on">You will need to record your odometer and litres purchased when logging fuel</string>
    <string name="fuel_consumption_summary_off">You will only need to record the price of your petrol when logging fuel</string>
</resources>