<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/maintenance_header">

        <EditTextPreference
            app:key="default_mechanic"
            app:title="@string/default_mechanic_title"
            app:useSimpleSummaryProvider="true" />

<!--        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />-->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/logging_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/fuel_consumption_title"
            app:summaryOff="@string/fuel_consumption_summary_off"
            app:summaryOn="@string/fuel_consumption_summary_on"
            app:defaultValue="false"/>

<!--        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />-->

    </PreferenceCategory>

</PreferenceScreen>